# RnD

./: .gitignore  README.md
server/: README.md  docker-compose.yml  makefile  pyproject.toml
server/main/: settings.py  urls.py
server/surveys/: admin.py  models.py  urls.py
server/surveys/migrations/: 0001_initial.py  0002_questiontypes.py  0003_rename_questiontypes_questiontype.py  0004_question.py  0005_survey.py  0006_rename_questions_survey_question_ids.py  0007_answerchoice.py  0008_surveyquestionanswers.py  0009_location_occupation_participant.py  0010_rename_surveyquestionanswers_surveyquestionanswerchoices.py  0011_rename_surveyquestionanswerchoices_surveyquestionanswerchoice.py  0012_rename_question_type_question_question_type_id.py  0013_surveyquestionanswerchoicecombo_and_more.py  0014_remove_survey_question_ids.py  0015_rename_surveyquestionanswerchoicecombo_questionandanswerchoice_and_more.py  0016_remove_survey_question_answer_choice_combos_ids.py  0017_delete_questionandanswerchoice.py  0018_surveyquestionandanswerchoices.py  0019_alter_answerchoice_text.py  0020_rename_surveyquestionandanswerchoices_surveyquestionandanswerchoice.py  0021_rename_answer_choices_surveyquestionandanswerchoice_answer_choice_ids_and_more.py  0022_surveyanswer_surveyresponse.py  0023_rename_brand_survey_brand_id.py  0024_remove_surveyanswer_answer_choice_id_and_more.py
server/surveys/participants/: models.py  serializers.py  tests.py  views.py
server/surveys/questions/: models.py  serializers.py  tests.py  views.py
server/surveys/responses/: models.py  serializers.py  (+2 more)
(+78 files in other folders)
